--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist -r https://github.com/fqihhh/qihProject.git"
+    "deploy": "gh-pages -d dist -r https://github.com/fqihhh/qihproject.git"
   },
   "dependencies": {
     "react": "^19.2.0",
